--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Your Name's Portfolio</title>
+	<title>Katie McBratney's Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
   	<!-- Facebook and Twitter integration -->
@@ -44,7 +44,7 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="fh5co-top-logo">
-				<div id="fh5co-logo"><a href="index.html">Your Name</a></div>
+				<div id="fh5co-logo"><a href="index.html">Katie McBratney</a></div>
 			</div>
 			<div class="fh5co-top-menu menu-1 text-center">
 				<ul>
@@ -212,7 +212,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="author">
-						<div class="author-inner animate-box" style="background-image: url(images/person.jpg);">
+						<div class="author-inner animate-box" style="background-image: url(images/profilepic.png);">
 						</div>
 						<div class="desc animate-box">
 							<span>Job Title or Objective</span>
@@ -249,7 +249,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">Your Name 2019. All Rights Reserved.</small>
+						<small class="block">Katie McBratney 2019. All Rights Reserved.</small>
 					</p>
 					
 					<ul class="fh5co-social-icons">
