--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Your Name's Portfolio</title>
+	<title>Katie McBratney's Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
   	<!-- Facebook and Twitter integration -->
@@ -46,7 +46,7 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="fh5co-top-logo">
-				<div id="fh5co-logo"><a href="index.html">Your Name</a></div>
+				<div id="fh5co-logo"><a href="index.html">Katie McBratney</a></div>
 			</div>
 			<div class="fh5co-top-menu menu-1 text-center">
 				<ul>
@@ -88,8 +88,8 @@
 						<div class="author-inner animate-box" style="background-image: url(images/person3.jpg);">
 						</div>
 						<div class="desc animate-box">
-							<span>Insert Job Title or Objective</span>
-							<h3>Your Name</h3>
+							<span>Software Developerr</span>
+							<h3>Katie McBratney</h3>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 							<p>Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 							<ul class="fh5co-social-icons">
@@ -206,7 +206,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">Your Name 2019. All Rights Reserved.</small>
+						<small class="block">Katie McBratney 2019. All Rights Reserved.</small>
 					</p>
 
 					<ul class="fh5co-social-icons">
