--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						Hello,
 					</h2>
 					<h4> 
-						<span class="fh5co-highlight">I am a.... [Write a little blurb about yourself that is a few sentences long describing background. Let me help you [insert your objective]!
+						<span class="fh5co-highlight">I am a student at Cal Poly Pomona, studying Computer Science. I am also a Software Development Intern for City National Bank.
 						</span>
 					</h4>
 					<p>
