--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="fh5co-top-logo">
-				<div id="fh5co-logo"><a href="index.html">NOBODY</a></div>
+				<div id="fh5co-logo"><a href="index.html">Katie McBratney</a></div>
 			</div>
 			<div class="fh5co-top-menu menu-1 text-center">
 				<ul>
@@ -88,7 +88,7 @@
 						<div class="author-inner animate-box" style="background-image: url(images/person3.jpg);">
 						</div>
 						<div class="desc animate-box">
-							<span>Software Developerr</span>
+							<span>Software Developer</span>
 							<h3>Katie McBratney</h3>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 							<p>Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
@@ -150,33 +150,33 @@
 							<h3 class="title animate-box">My Skills</h3>
 							<div class="row">
 								<div class="col-md-6 animate-box skills">
-									<h3>Designing</h3>
+									<h3>Java</h3>
 									<div class="progress">
-									   <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+									   <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width:100%">
 									      100%
 									   </div>
 									</div>
 								</div>
 								<div class="col-md-6 animate-box skills">
-									<h3>HTML5/CSS3</h3>
+									<h3>C#</h3>
 									<div class="progress">
-									   <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width:95%">
+									   <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:95%">
 									      95%
 									   </div>
 									</div>
 								</div>
 								<div class="col-md-6 animate-box skills">
-									<h3>jQuery</h3>
+									<h3>Python</h3>
 									<div class="progress">
-									   <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+									   <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width:80%">
 									      80%
 									   </div>
 									</div>
 								</div>
 								<div class="col-md-6 animate-box skills">
-									<h3>WordPress</h3>
+									<h3>Database Systems</h3>
 									<div class="progress">
-									   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+									   <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:90%">
 									      90%
 									   </div>
 									</div>
