--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 			<div class="row top-line animate-box">
 				<div class="col-md-6 col-md-offset-3 col-md-push-2 text-left fh5co-heading">
 					<h2>About Me</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+					<p>I am a student at Cal Poly Pomona, in my 3rd year of Computer Science. I also work as a Software Development Intern at City National Bank in the Greater Los Angeles area.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -152,32 +152,32 @@
 								<div class="col-md-6 animate-box skills">
 									<h3>Java</h3>
 									<div class="progress">
-									   <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-									      100%
+									   <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width:95%">
+									      95%
 									   </div>
 									</div>
 								</div>
 								<div class="col-md-6 animate-box skills">
 									<h3>C#</h3>
 									<div class="progress">
-									   <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:95%">
-									      95%
+									   <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+									      80%
 									   </div>
 									</div>
 								</div>
 								<div class="col-md-6 animate-box skills">
 									<h3>Python</h3>
 									<div class="progress">
-									   <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-									      80%
+									   <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width:45%">
+									      45%
 									   </div>
 									</div>
 								</div>
 								<div class="col-md-6 animate-box skills">
 									<h3>Database Systems</h3>
 									<div class="progress">
-									   <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-									      90%
+									   <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+									      75%
 									   </div>
 									</div>
 								</div>
